cmake_minimum_required(VERSION 3.29)
project(introAlgoritmos)

set(CMAKE_CXX_STANDARD 20)

add_executable(main main.cpp)
add_executable(hojaejercicios2 "Hoja de Ejercicios 2/hojaejercicios2.cpp" "Hoja de Ejercicios 2/hojaejercicios2.h"
        "Hoja de Ejercicios 2/problema2.cpp"
        "Hoja de Ejercicios 2/problema2.h"
        "Hoja de Ejercicios 2/problema3.cpp"
        "Hoja de Ejercicios 2/problema3.h"
        "Hoja de Ejercicios 2/problema4.cpp"
        "Hoja de Ejercicios 2/problema4.h"
        "Hoja de Ejercicios 2/problema7.cpp"
        "Hoja de Ejercicios 2/problema7.h"
        "Hoja de Ejercicios 2/problema9.cpp"
        "Hoja de Ejercicios 2/problema9.h"
        "Hoja de Ejercicios 2/problema11.cpp"
        "Hoja de Ejercicios 2/problema11.h"
        "Hoja de Ejercicios 2/problema12.cpp"
        "Hoja de Ejercicios 2/problema12.h"
        "Hoja de Ejercicios 2/problema5.cpp"
        "Hoja de Ejercicios 2/problema5.h"
        "Hoja de Ejercicios 2/problema1.cpp"
        "Hoja de Ejercicios 2/problema1.h"
        "Hoja de Ejercicios 2/problema6.cpp"
        "Hoja de Ejercicios 2/problema6.h"
        "Hoja de Ejercicios 2/problema8.cpp"
        "Hoja de Ejercicios 2/problema8.h"
        "Hoja de Ejercicios 2/problema10.cpp"
        "Hoja de Ejercicios 2/problema10.h"
        "Hoja de Ejercicios 2/problema13.cpp"
        "Hoja de Ejercicios 2/problema13.h"
        "Hoja de Ejercicios 2/problema14.cpp"
        "Hoja de Ejercicios 2/problema14.h"
        "Hoja de Ejercicios 2/problema15.cpp"
        "Hoja de Ejercicios 2/problema15.h"
)
add_executable(hojaejercicios3a "Hoja de Ejercicios 3A/hojaejercicios3.cpp" "Hoja de Ejercicios 3A/hojaejercicios3.h"
        "Hoja de Ejercicios 3A/problema1.cpp"
        "Hoja de Ejercicios 3A/problema1.h"
        "Hoja de Ejercicios 3A/problema2.cpp"
        "Hoja de Ejercicios 3A/problema2.h"
        "Hoja de Ejercicios 3A/problema3.cpp"
        "Hoja de Ejercicios 3A/problema3.h"
        "Hoja de Ejercicios 3A/problema4.cpp"
        "Hoja de Ejercicios 3A/problema4.h"
        "Hoja de Ejercicios 3A/problema5.cpp"
        "Hoja de Ejercicios 3A/problema5.h"
        "Hoja de Ejercicios 3A/problema6.cpp"
        "Hoja de Ejercicios 3A/problema6.h"
        "Hoja de Ejercicios 3A/problema7.cpp"
        "Hoja de Ejercicios 3A/problema7.h"
        "Hoja de Ejercicios 3A/problema8.cpp"
        "Hoja de Ejercicios 3A/problema8.h"
        "Hoja de Ejercicios 3A/problema9.cpp"
        "Hoja de Ejercicios 3A/problema9.h"
        "Hoja de Ejercicios 3A/problema11.cpp"
        "Hoja de Ejercicios 3A/problema11.h"
        "Hoja de Ejercicios 3A/problema12.cpp"
        "Hoja de Ejercicios 3A/problema12.h"
        "Hoja de Ejercicios 3A/problema13.cpp"
        "Hoja de Ejercicios 3A/problema13.h"
)
add_executable(hojaejercicios3b "Hoja de Ejercicios 3B/hojaejercicios3b.cpp" "Hoja de Ejercicios 3B/hojaejercicios3b.h"
        "Hoja de Ejercicios 3B/problema1.cpp"
        "Hoja de Ejercicios 3B/problema1.h"
        "Hoja de Ejercicios 3B/problema2.cpp"
        "Hoja de Ejercicios 3B/problema2.h"
        "Hoja de Ejercicios 3B/problema3.cpp"
        "Hoja de Ejercicios 3B/problema3.h"
        "Hoja de Ejercicios 3B/problema8.cpp"
        "Hoja de Ejercicios 3B/problema8.h"
        "Hoja de Ejercicios 3B/problema12.cpp"
        "Hoja de Ejercicios 3B/problema12.h"
        "Hoja de Ejercicios 3B/problema4.cpp"
        "Hoja de Ejercicios 3B/problema4.h"
        "Hoja de Ejercicios 3B/problema5.cpp"
        "Hoja de Ejercicios 3B/problema5.h"
        "Hoja de Ejercicios 3B/problema6.cpp"
        "Hoja de Ejercicios 3B/problema6.h"
        "Hoja de Ejercicios 3B/problema7.cpp"
        "Hoja de Ejercicios 3B/problema7.h"
        "Hoja de Ejercicios 3B/problema9.cpp"
        "Hoja de Ejercicios 3B/problema9.h"
        "Hoja de Ejercicios 3B/problema10.cpp"
        "Hoja de Ejercicios 3B/problema10.h"
        "Hoja de Ejercicios 3B/problema11.cpp"
        "Hoja de Ejercicios 3B/problema11.h"
        "Hoja de Ejercicios 3B/problema13.cpp"
        "Hoja de Ejercicios 3B/problema13.h"
)
add_executable(hojaejercicios4 "Hoja de Ejercicios 4/problema2.cpp" "Hoja de Ejercicios 4/problema2.h"
        "Hoja de Ejercicios 4/hojaejercicios4.cpp"
        "Hoja de Ejercicios 4/hojaejercicios4.h"
        "Hoja de Ejercicios 4/problema3.cpp"
        "Hoja de Ejercicios 4/problema3.h"
        "Hoja de Ejercicios 4/problema4.cpp"
        "Hoja de Ejercicios 4/problema4.h"
        "Hoja de Ejercicios 4/problema5.cpp"
        "Hoja de Ejercicios 4/problema5.h"
        "Hoja de Ejercicios 4/problema7.cpp"
        "Hoja de Ejercicios 4/problema7.h"
        "Hoja de Ejercicios 4/problema8.cpp"
        "Hoja de Ejercicios 4/problema8.h"
        "Hoja de Ejercicios 4/problema12.cpp"
        "Hoja de Ejercicios 4/problema12.h"
        "Hoja de Ejercicios 4/problema13.cpp"
        "Hoja de Ejercicios 4/problema13.h"
        "Hoja de Ejercicios 4/problema14.cpp"
        "Hoja de Ejercicios 4/problema14.h"
        "Hoja de Ejercicios 4/problema15.cpp"
        "Hoja de Ejercicios 4/problema15.h"
        "Hoja de Ejercicios 4/problema16.cpp"
        "Hoja de Ejercicios 4/problema16.h")
add_executable(hojaejercicios5a "Hoja de Ejercicios 5A/hojaejercicios5a.cpp" "Hoja de Ejercicios 5A/hojaejercicios5a.h"
        "Hoja de Ejercicios 5A/problema1.cpp"
        "Hoja de Ejercicios 5A/problema1.h"
        "Hoja de Ejercicios 5A/problema2.cpp"
        "Hoja de Ejercicios 5A/problema2.h"
        "Hoja de Ejercicios 5A/problema3.cpp"
        "Hoja de Ejercicios 5A/problema3.h"
        "Hoja de Ejercicios 5A/problema4.cpp"
        "Hoja de Ejercicios 5A/problema4.h"
        "Hoja de Ejercicios 5A/problema5.cpp"
        "Hoja de Ejercicios 5A/problema5.h")
add_executable(hojaejercicios5c "Hoja de Ejercicios 5C/hojaejercicios5c.cpp" "Hoja de Ejercicios 5C/hojaejercicios5c.h"
        "Hoja de Ejercicios 5C/problema1.cpp"
        "Hoja de Ejercicios 5C/problema1.h"
)
add_executable(hojaejercicios6a "Hoja de Ejercicios 6A/hojaejercicios6a.cpp" "Hoja de Ejercicios 6A/hojaejercicios6a.h"
        "Hoja de Ejercicios 6A/problema1.cpp"
        "Hoja de Ejercicios 6A/problema1.h"
        "Hoja de Ejercicios 6A/problema2.cpp"
        "Hoja de Ejercicios 6A/problema2.h")
add_executable(hojaejercicios6b "Hoja de Ejercicios 6B/hojaejercicios6b.cpp" "Hoja de Ejercicios 6B/hojaejercicios6b.h"
        "Hoja de Ejercicios 6B/problema1.cpp"
        "Hoja de Ejercicios 6B/problema1.h")
add_executable(hojaejercicios7a "Hoja de Ejercicios 7A/hojaejercicios7a.cpp" "Hoja de Ejercicios 7A/hojaejercicios7a.h"
        "Hoja de Ejercicios 7A/encuesta1.cpp"
        "Hoja de Ejercicios 7A/encuesta1.h"
        "Hoja de Ejercicios 7A/encuesta2.cpp"
        "Hoja de Ejercicios 7A/encuesta2.h"
        "Hoja de Ejercicios 7A/figuras1.cpp"
        "Hoja de Ejercicios 7A/figuras1.h"
        "Hoja de Ejercicios 7A/figuras2.cpp"
        "Hoja de Ejercicios 7A/figuras2.h"
        "Hoja de Ejercicios 7A/figuras3.cpp"
        "Hoja de Ejercicios 7A/figuras3.h"
        "Hoja de Ejercicios 7A/animaciones1.cpp"
        "Hoja de Ejercicios 7A/animaciones1.h"
        "Hoja de Ejercicios 7A/animaciones6.cpp"
        "Hoja de Ejercicios 7A/animaciones6.h"
        "Hoja de Ejercicios 7A/encuesta6.cpp"
        "Hoja de Ejercicios 7A/encuesta6.h"
        "Hoja de Ejercicios 7A/series1.cpp"
        "Hoja de Ejercicios 7A/series1.h"
        "Hoja de Ejercicios 7A/series3.cpp"
        "Hoja de Ejercicios 7A/series3.h"
        "Hoja de Ejercicios 7A/series4.cpp"
        "Hoja de Ejercicios 7A/series4.h")
add_executable(hojaejercicios5b "Hoja de Ejercicios 5B/hojaejercicios5b.cpp" "Hoja de Ejercicios 5B/hojaejercicios5b.h"
        "Hoja de Ejercicios 5B/problema1.cpp"
        "Hoja de Ejercicios 5B/problema1.h"
        "Hoja de Ejercicios 5B/problema2.cpp"
        "Hoja de Ejercicios 5B/problema2.h"
        "Hoja de Ejercicios 5B/problema3.cpp"
        "Hoja de Ejercicios 5B/problema3.h"
        "Hoja de Ejercicios 5B/problema4.cpp"
        "Hoja de Ejercicios 5B/problema4.h"
        "Hoja de Ejercicios 5B/problema5.cpp"
        "Hoja de Ejercicios 5B/problema5.h"
        "Hoja de Ejercicios 5B/problema6.cpp"
        "Hoja de Ejercicios 5B/problema6.h"
        "Hoja de Ejercicios 5B/problema7.cpp"
        "Hoja de Ejercicios 5B/problema7.h")
add_executable(hojaejercicios9 "Hoja de Ejercicios 9/hojaejercicios9.cpp" "Hoja de Ejercicios 9/hojaejercicios9.h"
        "Hoja de Ejercicios 9/problema1.cpp"
        "Hoja de Ejercicios 9/problema1.h"
        "Hoja de Ejercicios 9/problema2.cpp"
        "Hoja de Ejercicios 9/problema2.h")
add_executable(hojaejercicios10 "Hoja de Ejercicios 10/hojaejercicios10.cpp" "Hoja de Ejercicios 10/hojaejercicios10.h"
        "Hoja de Ejercicios 10/problema1.cpp"
        "Hoja de Ejercicios 10/problema1.h"
        "Hoja de Ejercicios 10/problema2.cpp"
        "Hoja de Ejercicios 10/problema2.h")
