cmake_minimum_required(VERSION 3.29)
project(introAlgoritmos)

set(CMAKE_CXX_STANDARD 20)

add_executable(main main.cpp)
add_executable(hojaejercicios2 "Hoja de Ejercicios 2/hojaejercicios2.cpp" "Hoja de Ejercicios 2/hojaejercicios2.h"
        "Hoja de Ejercicios 2/problema2.cpp"
        "Hoja de Ejercicios 2/problema2.h"
        "Hoja de Ejercicios 2/problema3.cpp"
        "Hoja de Ejercicios 2/problema3.h"
        "Hoja de Ejercicios 2/problema4.cpp"
        "Hoja de Ejercicios 2/problema4.h"
        "Hoja de Ejercicios 2/problema7.cpp"
        "Hoja de Ejercicios 2/problema7.h"
        "Hoja de Ejercicios 2/problema9.cpp"
        "Hoja de Ejercicios 2/problema9.h"
        "Hoja de Ejercicios 2/problema11.cpp"
        "Hoja de Ejercicios 2/problema11.h"
        "Hoja de Ejercicios 2/problema12.cpp"
        "Hoja de Ejercicios 2/problema12.h"
        "Hoja de Ejercicios 2/problema5.cpp"
        "Hoja de Ejercicios 2/problema5.h"
        "Hoja de Ejercicios 2/problema1.cpp"
        "Hoja de Ejercicios 2/problema1.h"
        "Hoja de Ejercicios 2/problema6.cpp"
        "Hoja de Ejercicios 2/problema6.h"
        "Hoja de Ejercicios 2/problema8.cpp"
        "Hoja de Ejercicios 2/problema8.h"
        "Hoja de Ejercicios 2/problema10.cpp"
        "Hoja de Ejercicios 2/problema10.h"
        "Hoja de Ejercicios 2/problema13.cpp"
        "Hoja de Ejercicios 2/problema13.h"
        "Hoja de Ejercicios 2/problema14.cpp"
        "Hoja de Ejercicios 2/problema14.h"
        "Hoja de Ejercicios 2/problema15.cpp"
        "Hoja de Ejercicios 2/problema15.h"
)
add_executable(hojaejercicios3a "Hoja de Ejercicios 3A - Funciones/hojaejercicios3.cpp" "Hoja de Ejercicios 3A - Funciones/hojaejercicios3.h"
        "Hoja de Ejercicios 3A - Funciones/problema1.cpp"
        "Hoja de Ejercicios 3A - Funciones/problema1.h"
        "Hoja de Ejercicios 3A - Funciones/problema2.cpp"
        "Hoja de Ejercicios 3A - Funciones/problema2.h"
        "Hoja de Ejercicios 3A - Funciones/problema3.cpp"
        "Hoja de Ejercicios 3A - Funciones/problema3.h"
        "Hoja de Ejercicios 3A - Funciones/problema4.cpp"
        "Hoja de Ejercicios 3A - Funciones/problema4.h"
        "Hoja de Ejercicios 3A - Funciones/problema5.cpp"
        "Hoja de Ejercicios 3A - Funciones/problema5.h"
        "Hoja de Ejercicios 3A - Funciones/problema6.cpp"
        "Hoja de Ejercicios 3A - Funciones/problema6.h"
        "Hoja de Ejercicios 3A - Funciones/problema7.cpp"
        "Hoja de Ejercicios 3A - Funciones/problema7.h"
        "Hoja de Ejercicios 3A - Funciones/problema8.cpp"
        "Hoja de Ejercicios 3A - Funciones/problema8.h"
        "Hoja de Ejercicios 3A - Funciones/problema9.cpp"
        "Hoja de Ejercicios 3A - Funciones/problema9.h"
        "Hoja de Ejercicios 3A - Funciones/problema11.cpp"
        "Hoja de Ejercicios 3A - Funciones/problema11.h"
        "Hoja de Ejercicios 3A - Funciones/problema12.cpp"
        "Hoja de Ejercicios 3A - Funciones/problema12.h"
        "Hoja de Ejercicios 3A - Funciones/problema13.cpp"
        "Hoja de Ejercicios 3A - Funciones/problema13.h"
)
add_executable(hojaejercicios3b "Hoja de Ejercicios 3B/hojaejercicios3b.cpp" "Hoja de Ejercicios 3B/hojaejercicios3b.h"
        "Hoja de Ejercicios 3B/problema1.cpp"
        "Hoja de Ejercicios 3B/problema1.h"
        "Hoja de Ejercicios 3B/problema2.cpp"
        "Hoja de Ejercicios 3B/problema2.h"
        "Hoja de Ejercicios 3B/problema3.cpp"
        "Hoja de Ejercicios 3B/problema3.h"
        "Hoja de Ejercicios 3B/problema8.cpp"
        "Hoja de Ejercicios 3B/problema8.h"
        "Hoja de Ejercicios 3B/problema12.cpp"
        "Hoja de Ejercicios 3B/problema12.h"
        "Hoja de Ejercicios 3B/problema4.cpp"
        "Hoja de Ejercicios 3B/problema4.h"
        "Hoja de Ejercicios 3B/problema5.cpp"
        "Hoja de Ejercicios 3B/problema5.h"
        "Hoja de Ejercicios 3B/problema6.cpp"
        "Hoja de Ejercicios 3B/problema6.h"
        "Hoja de Ejercicios 3B/problema7.cpp"
        "Hoja de Ejercicios 3B/problema7.h"
        "Hoja de Ejercicios 3B/problema9.cpp"
        "Hoja de Ejercicios 3B/problema9.h"
        "Hoja de Ejercicios 3B/problema10.cpp"
        "Hoja de Ejercicios 3B/problema10.h"
        "Hoja de Ejercicios 3B/problema11.cpp"
        "Hoja de Ejercicios 3B/problema11.h"
        "Hoja de Ejercicios 3B/problema13.cpp"
        "Hoja de Ejercicios 3B/problema13.h"
)
add_executable(hojaejercicios4 "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema2.cpp" "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema2.h"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/hojaejercicios4.cpp"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/hojaejercicios4.h"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema3.cpp"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema3.h"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema4.cpp"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema4.h"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema5.cpp"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema5.h"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema7.cpp"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema7.h"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema8.cpp"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema8.h"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema12.cpp"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema12.h"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema13.cpp"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema13.h"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema14.cpp"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema14.h"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema15.cpp"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema15.h"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema16.cpp"
        "Hoja de Ejercicios 4 - Estructuras selectivas y funciones/problema16.h")
add_executable(hojaejercicios5a "Hoja de Ejercicios 5A - Estructuras repetitivas/hojaejercicios5a.cpp" "Hoja de Ejercicios 5A - Estructuras repetitivas/hojaejercicios5a.h"
        "Hoja de Ejercicios 5A - Estructuras repetitivas/problema1.cpp"
        "Hoja de Ejercicios 5A - Estructuras repetitivas/problema1.h"
        "Hoja de Ejercicios 5A - Estructuras repetitivas/problema2.cpp"
        "Hoja de Ejercicios 5A - Estructuras repetitivas/problema2.h"
        "Hoja de Ejercicios 5A - Estructuras repetitivas/problema3.cpp"
        "Hoja de Ejercicios 5A - Estructuras repetitivas/problema3.h"
        "Hoja de Ejercicios 5A - Estructuras repetitivas/problema4.cpp"
        "Hoja de Ejercicios 5A - Estructuras repetitivas/problema4.h"
        "Hoja de Ejercicios 5A - Estructuras repetitivas/problema5.cpp"
        "Hoja de Ejercicios 5A - Estructuras repetitivas/problema5.h")
add_executable(hojaejercicios5c "Hoja de Ejercicios 5C - Formularios/hojaejercicios5c.cpp" "Hoja de Ejercicios 5C - Formularios/hojaejercicios5c.h"
        "Hoja de Ejercicios 5C - Formularios/problema1.cpp"
        "Hoja de Ejercicios 5C - Formularios/problema1.h"
)
add_executable(hojaejercicios6a "Hoja de Ejercicios 6A/hojaejercicios6a.cpp" "Hoja de Ejercicios 6A/hojaejercicios6a.h"
        "Hoja de Ejercicios 6A/problema1.cpp"
        "Hoja de Ejercicios 6A/problema1.h"
        "Hoja de Ejercicios 6A/problema2.cpp"
        "Hoja de Ejercicios 6A/problema2.h")
add_executable(hojaejercicios6b "Hoja de Ejercicios 6B/hojaejercicios6b.cpp" "Hoja de Ejercicios 6B/hojaejercicios6b.h"
        "Hoja de Ejercicios 6B/problema1.cpp"
        "Hoja de Ejercicios 6B/problema1.h")
add_executable(hojaejercicios7a "Hoja de Ejercicios 7A/hojaejercicios7a.cpp" "Hoja de Ejercicios 7A/hojaejercicios7a.h"
        "Hoja de Ejercicios 7A/encuesta1.cpp"
        "Hoja de Ejercicios 7A/encuesta1.h"
        "Hoja de Ejercicios 7A/encuesta2.cpp"
        "Hoja de Ejercicios 7A/encuesta2.h"
        "Hoja de Ejercicios 7A/figuras1.cpp"
        "Hoja de Ejercicios 7A/figuras1.h"
        "Hoja de Ejercicios 7A/figuras2.cpp"
        "Hoja de Ejercicios 7A/figuras2.h"
        "Hoja de Ejercicios 7A/figuras3.cpp"
        "Hoja de Ejercicios 7A/figuras3.h"
        "Hoja de Ejercicios 7A/animaciones1.cpp"
        "Hoja de Ejercicios 7A/animaciones1.h"
        "Hoja de Ejercicios 7A/animaciones6.cpp"
        "Hoja de Ejercicios 7A/animaciones6.h"
        "Hoja de Ejercicios 7A/encuesta6.cpp"
        "Hoja de Ejercicios 7A/encuesta6.h"
        "Hoja de Ejercicios 7A/series1.cpp"
        "Hoja de Ejercicios 7A/series1.h"
        "Hoja de Ejercicios 7A/series3.cpp"
        "Hoja de Ejercicios 7A/series3.h"
        "Hoja de Ejercicios 7A/series4.cpp"
        "Hoja de Ejercicios 7A/series4.h")
add_executable(hojaejercicios5b "Hoja de Ejercicios 5B - Figuras/hojaejercicios5b.cpp" "Hoja de Ejercicios 5B - Figuras/hojaejercicios5b.h"
        "Hoja de Ejercicios 5B - Figuras/problema1.cpp"
        "Hoja de Ejercicios 5B - Figuras/problema1.h"
        "Hoja de Ejercicios 5B - Figuras/problema2.cpp"
        "Hoja de Ejercicios 5B - Figuras/problema2.h"
        "Hoja de Ejercicios 5B - Figuras/problema3.cpp"
        "Hoja de Ejercicios 5B - Figuras/problema3.h"
        "Hoja de Ejercicios 5B - Figuras/problema4.cpp"
        "Hoja de Ejercicios 5B - Figuras/problema4.h"
        "Hoja de Ejercicios 5B - Figuras/problema5.cpp"
        "Hoja de Ejercicios 5B - Figuras/problema5.h"
        "Hoja de Ejercicios 5B - Figuras/problema6.cpp"
        "Hoja de Ejercicios 5B - Figuras/problema6.h"
        "Hoja de Ejercicios 5B - Figuras/problema7.cpp"
        "Hoja de Ejercicios 5B - Figuras/problema7.h")
add_executable(hojaejercicios9 "Hoja de Ejercicios 9 - Punteros/hojaejercicios9.cpp" "Hoja de Ejercicios 9 - Punteros/hojaejercicios9.h"
        "Hoja de Ejercicios 9 - Punteros/problema1.cpp"
        "Hoja de Ejercicios 9 - Punteros/problema1.h"
        "Hoja de Ejercicios 9 - Punteros/problema2.cpp"
        "Hoja de Ejercicios 9 - Punteros/problema2.h")
add_executable(hojaejercicios10 "Hoja de Ejercicios 10 - Arreglos unidimensionales/hojaejercicios10.cpp" "Hoja de Ejercicios 10 - Arreglos unidimensionales/hojaejercicios10.h"
        "Hoja de Ejercicios 10 - Arreglos unidimensionales/problema1.cpp"
        "Hoja de Ejercicios 10 - Arreglos unidimensionales/problema1.h"
        "Hoja de Ejercicios 10 - Arreglos unidimensionales/problema2.cpp"
        "Hoja de Ejercicios 10 - Arreglos unidimensionales/problema2.h"
        "Hoja de Ejercicios 10 - Arreglos unidimensionales/problema3.cpp"
        "Hoja de Ejercicios 10 - Arreglos unidimensionales/problema3.h"
        "Hoja de Ejercicios 10 - Arreglos unidimensionales/problema4.cpp"
        "Hoja de Ejercicios 10 - Arreglos unidimensionales/problema4.h")
add_executable(hojaejercicios10a "Hoja de Ejercicios 10A - Arreglos y animaciones/hojaejercicios10a.cpp" "Hoja de Ejercicios 10A - Arreglos y animaciones/hojaejercicios10a.h"
        "Hoja de Ejercicios 10A - Arreglos y animaciones/problema1.cpp"
        "Hoja de Ejercicios 10A - Arreglos y animaciones/problema1.h")
add_executable(hojaejercicios12 "Hoja de Ejercicios 12 - Struct/hojaejercicios12.cpp" "Hoja de Ejercicios 12 - Struct/hojaejercicios12.h"
        "Hoja de Ejercicios 12 - Struct/problema1.cpp"
        "Hoja de Ejercicios 12 - Struct/problema1.h"
        "Hoja de Ejercicios 12 - Struct/problema2.cpp"
        "Hoja de Ejercicios 12 - Struct/problema2.h"
        "Hoja de Ejercicios 12 - Struct/problema3.cpp"
        "Hoja de Ejercicios 12 - Struct/problema3.h"
        "Hoja de Ejercicios 12 - Struct/problema4.cpp"
        "Hoja de Ejercicios 12 - Struct/problema4.h")
add_executable(hojaejercicios13 "Hoja de Ejercicios 13 - Arreglos bidimensionales/hojaejercicios13.cpp" "Hoja de Ejercicios 13 - Arreglos bidimensionales/hojaejercicios13.h"
        "Hoja de Ejercicios 13 - Arreglos bidimensionales/problema1.cpp"
        "Hoja de Ejercicios 13 - Arreglos bidimensionales/problema1.h")
add_executable(hojaejercicios14 "Hoja de Ejercicios 14 - Matrices y arreglos/hojaejercicios14.cpp" "Hoja de Ejercicios 14 - Matrices y arreglos/hojaejercicios14.h"
        "Hoja de Ejercicios 14 - Matrices y arreglos/problema1.cpp"
        "Hoja de Ejercicios 14 - Matrices y arreglos/problema1.h"
        "Hoja de Ejercicios 14 - Matrices y arreglos/problema2.cpp"
        "Hoja de Ejercicios 14 - Matrices y arreglos/problema2.h")
add_executable(pc2 PC2/pc2.cpp PC2/pc2.h
        PC2/problema1.cpp
        PC2/problema1.h)
add_executable(hojaejercicios15 "Hoja de Ejercicios 15 - Casos integradores/hojaejercicios15.cpp" "Hoja de Ejercicios 15 - Casos integradores/hojaejercicios15.h"
        "Hoja de Ejercicios 15 - Casos integradores/problema1.cpp"
        "Hoja de Ejercicios 15 - Casos integradores/problema1.h"
        "Hoja de Ejercicios 15 - Casos integradores/problema2.cpp"
        "Hoja de Ejercicios 15 - Casos integradores/problema2.h")
add_executable(practicaexamenfinal "PRACTICA PARA EL EXAMEN FINAL/practicaexamenfinal.cpp" "PRACTICA PARA EL EXAMEN FINAL/practicaexamenfinal.h"
        "PRACTICA PARA EL EXAMEN FINAL/problema1.cpp"
        "PRACTICA PARA EL EXAMEN FINAL/problema1.h")
